sequrity & performance enhancements

--- a/Model Training Files/2 initial_training.ipynb
+++ b/Model Training Files/2 initial_training.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "\n",
     "# --- Step 5: Initialize Model and Attach Callback ---\n",
-    "model = YOLO('best.pt') # best.pt from tuning session\n",
+    "model = YOLO('yolov8m.pt') # fresh model\n",
     "model.add_callback(\"on_model_save\", save_checkpoint_callback)\n",
     "\n",
     "\n",
